# chatting-application

./: .gitignore  CMakeLists.txt  README.md  SETUP_GUIDE.md
src/client/: client.cpp  client.h  main.cpp
src/common/: colors.h  logger.h  protocol.h
src/server/: main.cpp  server.cpp  server.h
